BUILD: move application and mime registry files into Beast <package>/share
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -85,8 +85,8 @@ localedir="\${beastdir}/locale"
 bindir="\${beastdir}/bin"
 libdir="\${beastdir}/lib"
 bselibdir="\${beastdir}/lib"
-datarootdir="\${beastdir}"
-datadir="\${datarootdir}"
+datarootdir="\${beastdir}/share"
+datadir="\${beastdir}"
 docdir="\${beastdir}/doc"
 bseincludedir="\${beastdir}/include"
 # Provide directories for C++ and move Beast packagedir into libdir if under /usr
