--- a/data/beast.xml.in
+++ b/data/beast.xml.in
@@ -2,17 +2,10 @@
 <mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
   <mime-type type="audio/x-bse">
     <glob pattern="*.bse"/>
-    <magic priority="80">
-      <match type="string" value="; BseProject" offset="0:64"/>
-      <match type="string" value="(bse-version " offset="0:64"/>
-    </magic>
-    <_comment>BSE Synthesis File</_comment>
+    <comment>Beast Project File</comment>
   </mime-type>
   <mime-type type="audio/x-bsewave">
     <glob pattern="*.bsewave"/>
-    <magic priority="80">
-      <match type="string" value="#BseWave1" offset="0:64"/>
-    </magic>
-    <_comment>BSE Multi-Part Wave File</_comment>
+    <comment>Beast Multi-Part Wave File</comment>
   </mime-type>
 </mime-info>
