BUILD: preserve $bindir while installing executables in the Beast <package> dir
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -145,7 +145,7 @@ generated: clean-generated $(GENERATED)
 #
 # build rules for programs
 #
-bin_PROGRAMS = beast-@MAJOR@.@MINOR@.@MICRO@
+beastbin_PROGRAMS = beast-@MAJOR@.@MINOR@.@MICRO@
 beast_@MAJOR@_@MINOR@_@MICRO@_SOURCES = $(bst_cc_sources) bstmain.cc
 nodist_beast_@MAJOR@_@MINOR@_@MICRO@_SOURCES = ../topbuildid.cc
 beast_@MAJOR@_@MINOR@_@MICRO@_LDADD = $(progs_LDADD)
