--- a/configure.ac
+++ b/configure.ac
@@ -81,7 +81,7 @@ test "$TEST_SRCDIR" == "$TEST_BUILDDIR" || {
 
 # Define package directories per major/minor version
 localedir="\${beastdir}/locale"
-bindir="\${beastdir}/bin"
+beastbindir="\${beastdir}/bin"
 bselibdir="\${beastdir}/lib"
 datarootdir="\${beastdir}/share"
 datadir="\${beastdir}"
@@ -100,7 +100,7 @@ libdir=`eval echo "${libdir}"`; datarootdir=`eval echo "${datarootdir}"`; datadi
 bseincludedir=`eval echo "${bseincludedir}"`; beastdir=`eval echo "${beastdir}"`
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BEASTDIR, ["`eval echo "${beastdir}"`"], [Beast program directory])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BSEINCLUDEDIR, ["`eval echo "${bseincludedir}"`"], [Directory for libbse header files])
-AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BINDIR, ["`eval echo "${bindir}"`"], [Directory to install and execute programs])
+AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BINDIR, ["`eval echo "${beastbindir}"`"], [Directory to install and execute Beast])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LOCALEBASE, ["`eval echo ${localedir}`"], [Base directory for locale specific message catalogs])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LADSPA, ["`eval echo ${libdir}/ladspa`"], [Searchpath for LADSPA plugins])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BSELIBDIR, ["`eval echo ${bselibdir}`"], [Directory to install plugins and drivers])
@@ -112,8 +112,8 @@ libdir="$bak_libdir"; datarootdir="$bak_datarootdir"; datadir="$bak_datadir"
 prefix="$bak_prefix"; exec_prefix="$bak_exec_prefix"
 # Substitute directories in Makefiles
 AC_SUBST(bseincludedir)
+AC_SUBST(beastbindir)
 AC_SUBST(bselibdir)
-AC_SUBST(datadir)
 AC_SUBST(docdir)
 AC_SUBST(beastdir)
 
