BUILD: preserve $datadir while installing data files in the Beast <package> dir
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -84,7 +84,7 @@ beastlocaledir="\${beastdir}/locale"
 beastbindir="\${beastdir}/bin"
 bselibdir="\${beastdir}/lib"
 datarootdir="\${beastdir}/share"
-datadir="\${beastdir}"
+beastdatadir="\${beastdir}"
 beastdocdir="\${beastdir}/doc"
 bseincludedir="\${beastdir}/include"
 # Provide directories for C++ and move Beast packagedir into libdir if under /usr
@@ -94,9 +94,9 @@ case `eval echo "${exec_prefix}"` in
   /usr|/usr/local)	beastdir="$libdir/beast-$MAJOR-$MINOR" ;;
   *)            	beastdir="\${exec_prefix}/beast-$MAJOR-$MINOR" ;;
 esac
-bak_libdir="$libdir"; bak_datarootdir="$datarootdir"; bak_datadir="$datadir"
+bak_libdir="$libdir"; bak_datarootdir="$datarootdir"
 bak_bseincludedir="$bseincludedir"; bak_beastdir="$beastdir"
-libdir=`eval echo "${libdir}"`; datarootdir=`eval echo "${datarootdir}"`; datadir=`eval echo "${datadir}"`
+libdir=`eval echo "${libdir}"`; datarootdir=`eval echo "${datarootdir}"`
 bseincludedir=`eval echo "${bseincludedir}"`; beastdir=`eval echo "${beastdir}"`
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BEASTDIR, ["`eval echo "${beastdir}"`"], [Beast program directory])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BSEINCLUDEDIR, ["`eval echo "${bseincludedir}"`"], [Directory for libbse header files])
@@ -104,17 +104,18 @@ AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BINDIR, ["`eval echo "${beastbindir}"`"
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LOCALEBASE, ["`eval echo ${beastlocaledir}`"], [Directory for locale specific message catalogs])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_LADSPA, ["`eval echo ${libdir}/ladspa`"], [Searchpath for LADSPA plugins])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_BSELIBDIR, ["`eval echo ${bselibdir}`"], [Directory to install plugins and drivers])
-AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_DATADIR, ["`eval echo ${datadir}`"], [Directory to install samples, effects, scripts, etc])
+AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_DATADIR, ["`eval echo ${beastdatadir}`"], [Directory to install samples, effects, scripts, etc])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_DOCDIR, ["`eval echo ${beastdocdir}`"], [Directory to install documentation])
 AC_DEFINE_UNQUOTED(CONFIGURE_INSTALLPATH_USER_DATA, ["~/beast"], [Searchpath for user owned Beast resources])
 bseincludedir="$bak_bseincludedir"; beastdir="$bak_beastdir"
-libdir="$bak_libdir"; datarootdir="$bak_datarootdir"; datadir="$bak_datadir"
+libdir="$bak_libdir"; datarootdir="$bak_datarootdir"
 prefix="$bak_prefix"; exec_prefix="$bak_exec_prefix"
 # Substitute directories in Makefiles
 AC_SUBST(beastlocaledir)
 AC_SUBST(bseincludedir)
 AC_SUBST(beastbindir)
 AC_SUBST(bselibdir)
+AC_SUBST(beastdatadir)
 AC_SUBST(beastdocdir)
 AC_SUBST(beastdir)
 
