LAUNCHERS: use prominent warning suid setting failed and sleep shorter
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -19,4 +19,4 @@ install-exec-hook:	# runs after install-binPROGRAMS
 	true \
 	&& ( chown root $(DESTDIR)$(beastbindir)/beast   \
 	&&   chmod 4755 $(DESTDIR)$(beastbindir)/beast ) \
-	|| ( echo "*** WARNING *** $(DESTDIR)$(beastbindir)/beast needs to be installed as root to allow renicing ***" && sleep 5 )
+	|| ( echo -e "***\n*** WARNING: $(DESTDIR)$(beastbindir)/beast needs to be installed as root to allow renicing \\_(o.o)_/\n***" && sleep 1 )
