MISC: Dockerfile-apt.in: disable check-update-po during docker distcheck
Updated PO files are needed for releases and are enabled by default for
distcheck, but continuous integration builds including distcheck runs
should succeed without forcing update-po on every git push.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -136,7 +136,8 @@ distcheck: dist
 .PHONY: distcheck distuninstallcheck-hook
 
 # == distcheck-checks ==
+DISTCHECK_PO = 1
 check-update-po:
-	$(Q) $(MAKE) -C po check-update-po
+	$(Q) [ "$(DISTCHECK_PO)" = "0" ] || $(MAKE) -C po check-update-po
 DISTCHECK_HOOK = distcheck # help add dependencies to 'distcheck' without overriding its definition
 $(DISTCHECK_HOOK): check-update-po
