TRAVIS: allow_failures for wily and jessie which have broken npm/node deps
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ language: generic
 env:
   # INTENT: gccbuild clangbuild package bintrayup
   matrix:
-    - DIST="ubuntu:wily"        INTENT="gccbuild"
     - DIST="ubuntu:xenial"      INTENT="distcheck,gccbuild"
-    - DIST="debian:jessie"      INTENT="gccbuild"
     - DIST="ubuntu:yakkety"     INTENT="gccbuild"
     # test upcoming releases and get new compiler warnings
+    - DIST="ubuntu:wily"        INTENT="gccbuild"
+    - DIST="debian:jessie"      INTENT="gccbuild"
     - DIST="debian:stretch"     INTENT="gccbuild"
     - DIST="ubuntu:zesty"       INTENT="gccbuild"
     - DIST="ubuntu:zesty"       INTENT="clangbuild"
@@ -24,6 +24,8 @@ env:
     - DIST="debian:unstable"    INTENT="clangbuild"
 matrix:
   allow_failures:
+    - env: DIST="ubuntu:wily"        INTENT="gccbuild"
+    - env: DIST="debian:jessie"      INTENT="gccbuild"
     - env: DIST="debian:stretch"     INTENT="gccbuild"
     - env: DIST="ubuntu:zesty"       INTENT="gccbuild"
     - env: DIST="ubuntu:zesty"       INTENT="clangbuild"
